// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI search index creation and data loading Search by area should have correct index name and number of fields 1`] = `
[
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": true,
    "name": "areaKey",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaCode",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaType",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaName",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
]
`;

exports[`AI search index creation and data loading Search by indicator should have correct index name and number of fields 1`] = `
[
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": true,
    "name": "indicatorID",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "indicatorName",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "indicatorDefinition",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "earliestDataPeriod",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "latestDataPeriod",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "dataSource",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "lastUpdatedDate",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.DateTimeOffset",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "associatedAreaCodes",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Collection(Edm.String)",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "hasInequalities",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.Boolean",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "unitLabel",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
]
`;

exports[`AI search index creation and data loading Search by indicator should have correct scoring profile configuration 1`] = `
[
  {
    "functionAggregation": null,
    "functions": [],
    "name": "basicScoringProfile",
    "text": {
      "weights": {
        "indicatorDefinition": 5,
        "indicatorID": 20,
        "indicatorName": 10,
      },
    },
  },
]
`;
